[tool.poetry]
name = "knowledge-graph"
version = "0.1.0"
description = ""
authors = ["Ben Chambers <35960+bjchambers@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "knowledge_graph"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
